--- a/editor_publish.html
+++ b/editor_publish.html
@@ -66,7 +66,7 @@
     <div class="nr">
         <div class="item">
             <div class="item_from mb20 clearfix">
-                <label class="atr fl mr20 txt-333">姓名:</label>
+                <label class="atr fl mr20 txt-333">昵称:</label>
                 <p class="fl">666666</p>
             </div>
             <div class="item_from mb20 clearfix">
