首页下拉加载，点击列表的链接跳转，详情页参数链接参数获取，详情页数据获取

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="nr w1200 mar0">
             <div class="bt_index clearfix mb10"><h2 class="fl"><i class="icon iconfont icon_blue">&#xe641;</i>筛选</h2></div>
             <div class="filter mb10">
-                <select class="select" style="width:100px;">
+                <select class="select type" style="width:100px;">
                     <option value="1">类型</option>
                     <option value="1.01">RPG</option>
                     <option value="1.02">休闲</option>
@@ -118,7 +118,7 @@
                     <option value="1.05">横版过关</option>
                     <option value="1.06">开放世界</option>
                 </select>
-                <select class="select" style="width:100px;">
+                <select class="select time" style="width:100px;">
                     <option value="1">时间</option>
                     <option value="1.01">今天</option>
                     <option value="1.02">一周内</option>
@@ -136,9 +136,9 @@
 
                 </ul>
             </div>
-            <div class="pagelist">
-                <p><a href="###">上一页</a><span class="pageNum"><a class="thisclass" href="###">1</a></span><a href="###">下一页</a></p>
-            </div>
+            <!--<div class="pagelist">-->
+                <!--<p><a href="###">上一页</a><span class="pageNum"><a class="thisclass" href="###">1</a></span><a href="###">下一页</a></p>-->
+            <!--</div>-->
         </div>
     </div>
 </div>
