--- a/trial_details.html
+++ b/trial_details.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="js/select2.min.js"></script>
     <script type="text/javascript" src="js/jquery.SuperSlide.2.1.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
-    <script src="js/view/idea_details.js"></script>
+    <script src="js/view/trial_details.js"></script>
 
 </head>
 <body>
