渲染详情页简介，banner，详细介绍，特殊说明，版本详情和开发人员部分内容

--- a/trial_details.html
+++ b/trial_details.html
@@ -61,62 +61,24 @@
 <!--小banner end-->
 <div class="game_introduction mar0 clearfix">
     <div class="fl info txt-l">
-        <div class="title">
-            <h2 class="caption">克尼坦泰</h2>
-            <p class="date">2019/06/12</p>
 
-        </div>
-        <p class="desc">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。</p>
-        <div class="focus">
-            <span><i class="icon iconfont mr5">&#xe6b3;</i><em>99999</em></span>
-            <a href="###" class="btndownload"><em>下载</em></a>
-        </div>
-        <p class="tag"><span><em>RPG</em></span><span><em>射击</em></span><span><em>冒险</em></span><span><em>等等</em></span></p>
     </div>
     <div class="pic fr">
-        <img src="images/youxi01.jpg" alt="" />
+        <div class="swiper-wrapper">
+
+        </div>
     </div>
 </div>
 <div class="mainbody w1200 mar0 page_game_introduction">
     <div class="section clearfix">
         <div class="fl introduction">
-            <div class="item mb20">
-                <h3>详细介绍</h3>
-                <p class="text_box">游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍游戏详细介绍</p>
-            </div>
-            <div class="item">
-                <h3>特殊说明 </h3>
-                <p class="text_box">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。</p>
-            </div>
+
         </div>
         <div class="fr version">
             <h3>版本详情 </h3>
             <div class="version_box">
                 <div class="zScroll">
-                    <div class="item mb20">
-                        <div class="title">V10.0 </div>
-                        <p class="desc">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游  </p>
-                    </div>
-                    <div class="item mb20">
-                        <div class="title">V10.0 </div>
-                        <p class="desc">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游  </p>
-                    </div>
-                    <div class="item mb20">
-                        <div class="title">V10.0 </div>
-                        <p class="desc">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游  </p>
-                    </div>
-                    <div class="item mb20">
-                        <div class="title">V10.0 </div>
-                        <p class="desc">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游  </p>
-                    </div>
-                    <div class="item mb20">
-                        <div class="title">V10.0 </div>
-                        <p class="desc">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游  </p>
-                    </div>
-                    <div class="item mb20">
-                        <div class="title">V10.0 </div>
-                        <p class="desc">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游  </p>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -125,15 +87,7 @@
         <h2 class="mb20">开发人员</h2>
         <div class="filter_list found_friend_list">
             <ul class="clearfix">
-                <li class="fl">
-                    <a href="player_information.html" class="item ease-1 clearfix">
-                        <div class="pic ease-1 fl radius-circle"><img src="images/touxiang01.jpg" alt=""></div>
-                        <div class="txt fl">
-                            <h1 class="title fs20 text-overflow">Unlimited_Deer_</h1>
-                            <p class="tag inlineblock ml10"><span><em>策划</em></span><span><em>RGB</em></span></p>
-                        </div>
-                    </a>
-                </li>
+
                 <li class="fl">
                     <a href="player_information.html" class="item ease-1 clearfix">
                         <div class="pic ease-1 fl radius-circle"><img src="images/touxiang01.jpg" alt=""></div>
