--- a/editor.html
+++ b/editor.html
@@ -198,21 +198,15 @@
                 </div>
             </div>
             <div class="item_from mb20 clearfix">
-                <label class="atr fl mr20 txt-333">国家:</label>
+                <label class="atr fl mr20 txt-333">地区:</label>
                 <div class="fl">
-                    <select value="" class="selectbox radius-2" datatype="*">
-                        <option value="">国家</option>
-                        <option value="China">中国</option>
-                        <option value="US">US</option>
-                        <option value="England">英国</option>
-                        <option value="Canada">加拿大</option>
-                        <option value="Cube">古巴</option>
+                    <select value="" class="selectbox radius-2" datatype="*" id="region-1">
                     </select>
-                    <select class="selectbox ml10 radius-2" datatype="*">
+                    <select class="selectbox ml10 radius-2" datatype="*" id="region-2">
                         <option value="">省</option>
                         <option value="44">北京</option>
                     </select>
-                    <select class="selectbox ml10 radius-2" datatype="*">
+                    <select class="selectbox ml10 radius-2" datatype="*" id="region-3">
                         <option value="">市</option>
                         <option value="42">北京</option>
                     </select>
