--- a/found_friend_edit.html
+++ b/found_friend_edit.html
@@ -74,70 +74,21 @@ background:rgba(255,255,255,1)"/></p>
             </div>
             <div class="filter_list found_friend_list">
                 <ul id="team-list">
-                    <li>
-                        <a href="javascript:;" class="item ease-1 clearfix">
-                            <div class="pic fl ease-1 radius-circle"><img src="images/found_friend01.jpg" alt=""></div>
-                            <div class="txt">
-                                <h1 class="title fs20 text-overflow">Unlimited_Deer_</h1>
-                                <p class="desc fs14 txt-666 mb10">coldezhang@foxmail.com</p>
-                                <p class="tag inlineblock ml10"><span><em>发起人</em></span></p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="###" class="item ease-1 clearfix">
-                            <div class="pic fl ease-1 radius-circle"><img src="images/found_friend01.jpg" alt=""></div>
-                            <div class="txt">
-                                <h1 class="title fs20 text-overflow">Unlimited_Deer_</h1>
-                                <p class="desc fs14 txt-666 mb10">coldezhang@foxmail.com</p>
-                                <p class="tag inlineblock ml10"><span><em>测试</em></span><span><em>射击</em></span></p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="###" class="item ease-1 clearfix">
-                            <div class="pic fl ease-1 radius-circle"><img src="images/found_friend01.jpg" alt=""></div>
-                            <div class="txt">
-                                <h1 class="title fs20 text-overflow">Unlimited_Deer_</h1>
-                                <p class="desc fs14 txt-666 mb10">coldezhang@foxmail.com</p>
-                                <p class="tag inlineblock ml10"><span><em>测试</em></span><span><em>射击</em></span></p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="###" class="item ease-1 clearfix">
-                            <div class="pic fl ease-1 radius-circle"><img src="images/found_friend01.jpg" alt=""></div>
-                            <div class="txt">
-                                <h1 class="title fs20 text-overflow">Unlimited_Deer_</h1>
-                                <p class="desc fs14 txt-666 mb10">coldezhang@foxmail.com</p>
-                                <p class="tag inlineblock ml10"><span><em>测试</em></span><span><em>射击</em></span></p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="###" class="item ease-1 clearfix">
-                            <div class="pic fl ease-1 radius-circle"><img src="images/found_friend01.jpg" alt=""></div>
-                            <div class="txt">
-                                <h1 class="title fs20 text-overflow">Unlimited_Deer_</h1>
-                                <p class="desc fs14 txt-666 mb10">coldezhang@foxmail.com</p>
-                                <p class="tag inlineblock ml10"><span><em>测试</em></span><span><em>射击</em></span></p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="###" class="item ease-1 clearfix">
-                            <div class="pic fl ease-1 radius-circle"><img src="images/found_friend01.jpg" alt=""></div>
-                            <div class="txt">
-                                <h1 class="title fs20 text-overflow">Unlimited_Deer_</h1>
-                                <p class="desc fs14 txt-666 mb10">coldezhang@foxmail.com</p>
-                                <p class="tag inlineblock ml10"><span><em>测试</em></span><span><em>射击</em></span></p>
-                            </div>
-                        </a>
-                    </li>
+                    <!--<li>-->
+                        <!--<a href="javascript:;" class="item ease-1 clearfix">-->
+                            <!--<div class="pic fl ease-1 radius-circle"><img src="images/found_friend01.jpg" alt=""></div>-->
+                            <!--<div class="txt">-->
+                                <!--<h1 class="title fs20 text-overflow">Unlimited_Deer_</h1>-->
+                                <!--<p class="desc fs14 txt-666 mb10">coldezhang@foxmail.com</p>-->
+                                <!--<p class="tag inlineblock ml10"><span><em>发起人</em></span></p>-->
+                            <!--s</div>-->
+                        <!--</a>-->
+                    <!--</li>-->
                 </ul>
             </div>
         </div>
     </div>
+    <div class="team-modify-submission" id="team-modify-submission">保存</div>
 </div>
 <div class="invitation-mask">
     <div class="invitation">
@@ -152,22 +103,22 @@ background:rgba(255,255,255,1)"/></p>
         </div>
         <div class="invitation-content">
             <header class="clearfix">
-                <img src="" alt="" class="fl">
+                <img src="" alt="" class="fl" id="detailed-headUrl">
                 <div class="name-mailbox fl">
-                    <p>名字</p>
-                    <span>邮箱</span>
+                    <p id="detailed-nickName">名字</p>
+                    <span id="detailed-email">邮箱</span>
                 </div>
-                <div class="invitation-btn pointer fr">邀请</div>
+                <div class="invitation-btn pointer fr" id="invitation-btn">邀请</div>
             </header>
             <div class="detailed clearfix">
-                <div class="detailed-item fl">性别：<span>男</span></div>
-                <div class="detailed-item fl">TA玩过的第一款游戏是：<span>男</span></div>
-                <div class="detailed-item fl">年龄：<span>男</span></div>
-                <div class="detailed-item fl">TA最喜欢一款游戏是：<span>男</span></div>
-                <div class="detailed-item fl">地区：<span>男</span></div>
-                <div class="detailed-item fl">TA曾经开发过：<span>男</span></div>
-                <div class="detailed-item fl">QQ：<span>男</span></div>
-                <div class="detailed-item fl">TA从事开发：<span>男</span></div>
+                <div class="detailed-item fl">性别：<span id="detailed-sex"></span></div>
+                <div class="detailed-item fl">TA玩过的第一款游戏是：<span id="detailed-firstGame"></span></div>
+                <div class="detailed-item fl">生日：<span id="detailed-brith"></span></div>
+                <div class="detailed-item fl">TA最喜欢一款游戏是：<span id="detailed-favoriteGame"></span></div>
+                <div class="detailed-item fl">地区：<span></span></div>
+                <div class="detailed-item fl">TA曾经开发过：<span></span></div>
+                <div class="detailed-item fl">QQ：<span id="detailed.qq"></span></div>
+                <div class="detailed-item fl">TA从事开发：<span id="detailed-startTime"></span></div>
             </div>
             <div class="detailed-footer pointer">更多信息 》</div>
         </div>
