详情页面的dialog，发送评测接口，回复评测接口调用，评测列表渲染

--- a/trial_details.html
+++ b/trial_details.html
@@ -15,7 +15,30 @@
     <script type="text/javascript" src="js/jquery.SuperSlide.2.1.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     <script src="js/view/trial_details.js"></script>
-
+    <style>
+        .dialog {
+            /*display: none;*/
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
+        .dialog-mask {
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,.7);
+        }
+        .dialog-content {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 50%;
+            padding: 20px;
+            background: #fff;
+        }
+    </style>
 </head>
 <body>
 <!--[if lte IE 8]>
@@ -88,33 +111,6 @@
         <div class="filter_list found_friend_list">
             <ul class="clearfix">
 
-                <li class="fl">
-                    <a href="player_information.html" class="item ease-1 clearfix">
-                        <div class="pic ease-1 fl radius-circle"><img src="images/touxiang01.jpg" alt=""></div>
-                        <div class="txt fl">
-                            <h1 class="title fs20 text-overflow">Unlimited_Deer_</h1>
-                            <p class="tag inlineblock ml10"><span><em>美术</em></span><span><em>冒险</em></span></p>
-                        </div>
-                    </a>
-                </li>
-                <li class="fl">
-                    <a href="player_information.html" class="item ease-1 clearfix">
-                        <div class="pic ease-1 fl radius-circle"><img src="images/touxiang01.jpg" alt=""></div>
-                        <div class="txt fl">
-                            <h1 class="title fs20 text-overflow">Unlimited_Deer_</h1>
-                            <p class="tag inlineblock ml10"><span><em>程序</em></span><span><em>剧情</em></span></p>
-                        </div>
-                    </a>
-                </li>
-                <li class="fl">
-                    <a href="player_information.html" class="item ease-1 clearfix">
-                        <div class="pic ease-1 fl radius-circle"><img src="images/touxiang01.jpg" alt=""></div>
-                        <div class="txt fl">
-                            <h1 class="title fs20 text-overflow">Unlimited_Deer_</h1>
-                            <p class="tag inlineblock ml10"><span><em>生效</em></span><span><em>动作</em></span></p>
-                        </div>
-                    </a>
-                </li>
             </ul>
         </div>
     </div>
@@ -126,75 +122,23 @@
         <div class="pingjia_box txt-r">
             <textarea class="input_text radius-5 mb20" style="resize:none;" placeholder="这里显示撰写的测评，重新载入后还显示在这里，可以重复修改发表 发表后覆盖原测评" name="content"></textarea>
             <button class="btn_submit btn_blue btn_small radius-5 shadow-text-1 ease-1" style=" width:80px;">发表</button>
-
         </div>
     </div>
     <div class="section comments">
         <div class="comments_list">
-            <div class="comments_bigbox">
-                <div class="comments_item mb20">
-                    <div class="comments_avatar avatar_radius radius-circle"><img src="images/touxiang01.jpg"></div>
-                    <div class="comments_point"><span class="txt-rank txt-peach">2019/06/17  15:30</span></div>
-                    <div class="comments_content">
-                        <h5 class="comments_user"><span class="mr10 fs16">Unlimited_Deer_ </span></h5>
-                        <p class="comments_body txt-333 mb20 fs16">消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息</p>
-                        <div class="comments_mark fs16"><span class="txt-blue mr10"><i class="iconfont mr5">&#xe60d;</i>回复</span><span class="txt-666 mr10"><i class="iconfont mr5 txt-red">&#xe651;</i>举报</span></div>
-                    </div>
+
+        </div>
+    </div>
+    <div class="dialog" id="dialog">
+        <div class="dialog-mask"></div>
+        <div class="dialog-content">
+            <div class="section" id="assessment1">
+                <div class="title" style="margin-bottom: 10px;">
+                    <h3>回复</h3>
                 </div>
-                <div class="comments_smallbox">
-                    <div class="comments_item mb20">
-                        <div class="comments_avatar avatar_radius radius-circle"><img src="images/touxiang01.jpg"></div>
-                        <div class="comments_point"><span class="txt-rank txt-peach">2019/06/17  15:30</span></div>
-                        <div class="comments_content">
-                            <h5 class="comments_user"><span class="mr10 fs14">Unlimited_Deer_ </span></h5>
-                            <p class="comments_body txt-333 mb20 fs14">消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息</p>
-                            <div class="comments_mark"><span class="txt-blue mr10"><i class="iconfont mr5">&#xe60d;</i>回复</span><span class="txt-666 mr10"><i class="iconfont mr5 txt-red">&#xe651;</i>举报</span></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="comments_smallbox">
-                    <div class="comments_item mb20">
-                        <div class="comments_avatar avatar_radius radius-circle"><img src="images/touxiang01.jpg"></div>
-                        <div class="comments_point"><span class="txt-rank txt-peach">2019/06/17  15:30</span></div>
-                        <div class="comments_content">
-                            <h5 class="comments_user"><span class="mr10">Unlimited_Deer_ </span></h5>
-                            <p class="comments_body txt-333 mb20">消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息</p>
-                            <div class="comments_mark"><span class="txt-blue mr10"><i class="iconfont mr5">&#xe60d;</i>回复</span><span class="txt-666 mr10"><i class="iconfont mr5 txt-red">&#xe651;</i>举报</span></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="comments_bigbox">
-                <div class="comments_item mb20">
-                    <div class="comments_avatar avatar_radius radius-circle"><img src="images/touxiang01.jpg"></div>
-                    <div class="comments_point"><span class="txt-rank txt-peach">2019/06/17  15:30</span></div>
-                    <div class="comments_content">
-                        <h5 class="comments_user"><span class="mr10">Unlimited_Deer_ </span></h5>
-                        <p class="comments_body txt-333 mb20">消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息</p>
-                        <div class="comments_mark"><span class="txt-blue mr10"><i class="iconfont mr5">&#xe60d;</i>回复</span><span class="txt-666 mr10"><i class="iconfont mr5 txt-red">&#xe651;</i>举报</span></div>
-                    </div>
-                </div>
-                <div class="comments_smallbox">
-                    <div class="comments_item mb20">
-                        <div class="comments_avatar avatar_radius radius-circle"><img src="images/touxiang01.jpg"></div>
-                        <div class="comments_point"><span class="txt-rank txt-peach">2019/06/17  15:30</span></div>
-                        <div class="comments_content">
-                            <h5 class="comments_user"><span class="mr10">Unlimited_Deer_ </span></h5>
-                            <p class="comments_body txt-333 mb20">消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息</p>
-                            <div class="comments_mark"><span class="txt-blue mr10"><i class="iconfont mr5">&#xe60d;</i>回复</span><span class="txt-666 mr10"><i class="iconfont mr5 txt-red">&#xe651;</i>举报</span></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="comments_smallbox">
-                    <div class="comments_item mb20">
-                        <div class="comments_avatar avatar_radius radius-circle"><img src="images/touxiang01.jpg"></div>
-                        <div class="comments_point"><span class="txt-rank txt-peach">2019/06/17  15:30</span></div>
-                        <div class="comments_content">
-                            <h5 class="comments_user"><span class="mr10">Unlimited_Deer_ </span></h5>
-                            <p class="comments_body txt-333 mb20">消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息消息消息消息消息消息消息消息消息消息，消息消息消息消息消息。消息消息消息消息消息消息消息消息消息消息消息，消息消息消息</p>
-                            <div class="comments_mark"><span class="txt-blue mr10"><i class="iconfont mr5">&#xe60d;</i>回复</span><span class="txt-666 mr10"><i class="iconfont mr5 txt-red">&#xe651;</i>举报</span></div>
-                        </div>
-                    </div>
+                <div class="pingjia_box txt-r">
+                    <textarea class="input_text radius-5 mb20" style="resize:none;" placeholder="这里显示撰写的测评，重新载入后还显示在这里，可以重复修改发表 发表后覆盖原测评" name="content"></textarea>
+                    <button class="btn_submit btn_blue btn_small radius-5 shadow-text-1 ease-1" style=" width:80px;">发表</button>
                 </div>
             </div>
         </div>
